# bazel-spike

./: BUILD.bazel  WORKSPACE  main.js  out.txt  package.json
app/: BUILD.bazel  main.js  package-lock.json
