print ("BUILD.bazel step 1")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
print ("BUILD.bazel step 2")

nodejs_binary(
  name = "app",
  node_modules = "@foo//:node_modules",
  entry_point = "workspacename/main.js",
  data = [
    "@foo//:node_modules",
    "main.js"
  ],
  visibility = ["//visibility:public"],
)

print ("BUILD.bazel step 3")
